# Sentrix-IAM

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDING_MANUAL.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  implementation_plan.md  package-lock.json  package.json  pyrefly.toml  render.yaml
.ai/: dev_prompts.md  error_log.md  lessons_learned.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  build.gradle  gradle.properties  settings.gradle
frontend/: Dockerfile  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx  BillingContext.tsx  NotificationContext.tsx  ThemeContext.tsx  WebSocketContext.tsx
frontend/src/pages/: AgentsPage.tsx  AuditPage.tsx  BillingPage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  MonitorPage.tsx  PoliciesPage.tsx  RegisterPage.tsx  (+3 more)
ml/: Dockerfile  requirements.txt
ml/api/: dependencies.py  main.py  routes.py  schemas.py
ml/data/: anomaly_scenarios.py  generator.py  profiles.py
ml/features/: extractor.py  preprocessor.py  sequence_builder.py
ml/models/: isolation_forest.py  lstm_autoencoder.py  registry.py
ml/scoring/: baseline_builder.py  risk_scorer.py
ml/training/: evaluate.py  train_pipeline.py
nginx/: nginx.conf
sdk/: PUBLISHING_GUIDE.md
sdk/javascript/: .npmignore  README.md  package.json
sdk/python/: LICENSE  MANIFEST.in  README.md  pyproject.toml
sdk/python/sentrix/: __init__.py  client.py
sdk/python/tests/: test_integration.py
(+157 files in other folders)
